--- a/.github/workflows/Main.yml
+++ b/.github/workflows/Main.yml
@@ -16,18 +16,20 @@ jobs:
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks out the repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v2
+      - name: Checkout repository
+        uses: actions/checkout@v2
 
       # Generates the snake
-      - uses: Platane/snk@master
-        id: snake-gif
+      - name: Generate snake animation
+        uses: Platane/snk@master
         with:
           github_user_name: oussamahdidou
           gif_out_path: dist/github-contribution-grid-snake.gif
           svg_out_path: dist/github-contribution-grid-snake.svg
 
       # Show the status of the build for easier debugging
-      - run: git status
+      - name: Show git status
+        run: git status
 
       # Push the changes
       - name: Push changes
@@ -37,7 +39,8 @@ jobs:
           branch: master
           force: true
 
-      - uses: crazy-max/ghaction-github-pages@v2.1.3
+      - name: Deploy to GitHub Pages
+        uses: crazy-max/ghaction-github-pages@v2.1.3
         with:
           target_branch: output
           build_dir: dist
